; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/uvc/extr_uvc_video.c_uvc_video_suspend.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/uvc/extr_uvc_video.c_uvc_video_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uvc_streaming = type { i32, i32, %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uvc_video_suspend(%struct.uvc_streaming* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.uvc_streaming*, align 8
  store %struct.uvc_streaming* %0, %struct.uvc_streaming** %3, align 8
  %4 = load %struct.uvc_streaming*, %struct.uvc_streaming** %3, align 8
  %5 = getelementptr inbounds %struct.uvc_streaming, %struct.uvc_streaming* %4, i32 0, i32 3
  %6 = call i32 @uvc_queue_streaming(i32* %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %23

9:                                                ; preds = %1
  %10 = load %struct.uvc_streaming*, %struct.uvc_streaming** %3, align 8
  %11 = getelementptr inbounds %struct.uvc_streaming, %struct.uvc_streaming* %10, i32 0, i32 0
  store i32 1, i32* %11, align 8
  %12 = load %struct.uvc_streaming*, %struct.uvc_streaming** %3, align 8
  %13 = call i32 @uvc_uninit_video(%struct.uvc_streaming* %12, i32 0)
  %14 = load %struct.uvc_streaming*, %struct.uvc_streaming** %3, align 8
  %15 = getelementptr inbounds %struct.uvc_streaming, %struct.uvc_streaming* %14, i32 0, i32 2
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.uvc_streaming*, %struct.uvc_streaming** %3, align 8
  %20 = getelementptr inbounds %struct.uvc_streaming, %struct.uvc_streaming* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @usb_set_interface(i32 %18, i32 %21, i32 0)
  store i32 0, i32* %2, align 4
  br label %23

23:                                               ; preds = %9, %8
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @uvc_queue_streaming(i32*) #1

declare dso_local i32 @uvc_uninit_video(%struct.uvc_streaming*, i32) #1

declare dso_local i32 @usb_set_interface(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
